--- a/htdocs/style.css
+++ b/htdocs/style.css
@@ -38,16 +38,20 @@ ol.menu li {
 
 ol.menu a {
     text-decoration: none;
+    color: #000000;
 }
 ol.menu a:hover {
     text-decoration: underline;
 }
 
-
 ol.menulevel0 {
-    background: rgb(128, 128, 128);
+    background: rgb(233, 233, 233);
 }
 
 ol.menulevel1 {
-    background: rgb(233, 233, 233);
+    background: rgb(128, 128, 128);
+}
+
+ol.menulevel1 a {
+    color: #222222;
 }
