--- a/htdocs/style.css
+++ b/htdocs/style.css
@@ -55,3 +55,13 @@ ol.menulevel1 {
 ol.menulevel1 a {
     color: #222222;
 }
+
+
+.footerrule {
+    height: 1px;
+    color: #000000;
+}
+#footerinfo {
+    font-family: "Georgia";
+    font-size: 15px;
+}
